--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,8 +1,10 @@
 <header>
+    
     <div class="main" id="main_title">
+        <img src="../../favicon_hires.png" style="max-height: 24px; margin-right: 8px;"/>
         <a href={{ config.base_url }}>{{ config.title }}</a>
     </div>
-
+    
     <nav>
         {% for menu in config.extra.translations[lang][0].menus %}
             <a href={{ menu.url }}>{{ menu.name }}</a>
