Add Move Liquidity Book pt. 1 article

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -7,7 +7,7 @@
     {% endfor %}
   </div>
   <div class="footer-info">
-    {{ now() | date(format="%Y") }} © {{ config.extra.copyright }} | <a
+    {{ now() | date(format="%Y") }} © {{ config.extra.copyright }} | Built with <a href="https://www.getzola.org/">Zola</a> / <a
       href="https://github.com/XXXMrG/archie-zola">Archie-Zola Theme</a>
   </div>
 </footer>
