--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -23,6 +23,13 @@
        url('../fonts/roboto-mono-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/roboto-mono-v12-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
+/* roboto-mono-bold - latin */
+@font-face {  
+  font-family: 'Roboto Mono';
+  font-style: bold;
+  font-weight: 700;  
+  src: url('../fonts/RobotoMono-Bold.ttf'); 
+}
 /* ibm-plex-mono-500italic - latin */
 @font-face {
   font-family: 'IBM Plex Mono';
